--- a/GadgetEsia/index.html
+++ b/GadgetEsia/index.html
@@ -150,7 +150,7 @@
             <div class="choose_section_2">
                <div class="row">
                   <div class="intro">
-                     <iframe width="560" height="315" src="https://www.youtube.com/embed/2ExVA1lZ--Y?si=QQRrOD-tRKLkUznl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                     <iframe width="80%" height="300px" src="https://www.youtube.com/embed/2ExVA1lZ--Y?si=QQRrOD-tRKLkUznl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                   </div>
                   <div>
                      <div class="slider">
@@ -739,7 +739,7 @@
                            <option value="3">White Pearl</option>
                         </select>
                         <legend>Location</legend>
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3165.4794564394006!2d127.02690229999999!3d37.4966085!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca15a36f93c23%3A0x6f9b641b98c82ee7!2sSamsung%20Electronics%20Seocho%20Building!5e0!3m2!1sid!2sid!4v1732684063957!5m2!1sid!2sid" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3165.4794564394006!2d127.02690229999999!3d37.4966085!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca15a36f93c23%3A0x6f9b641b98c82ee7!2sSamsung%20Electronics%20Seocho%20Building!5e0!3m2!1sid!2sid!4v1732684063957!5m2!1sid!2sid" width="80%" height="250px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         <input class="mail_text" type="text" placeholder="Detail Location" >
                         <textarea class="massage-bt" placeholder="Massage(Optional)" rows="5" id="comment" name="Massage"></textarea>
                         <legend>Payment method</legend>
