--- a/GadgetEsia/index.html
+++ b/GadgetEsia/index.html
@@ -730,7 +730,7 @@
                         </select>
                         <legend>Color</legend>
                         <select class="select">
-                           <option value="" disabled selected>Storage Capacity</option>
+                           <option value="" disabled selected>Choose Color</option>
                            <option value="1">White</option>
                            <option value="2">Grey</option>
                            <option value="3">Pink</option>
